# vertexai-pipeline-image-version-switch

./: Dockerfile  Makefile  README.md  config.py  pipeline.py  pyproject.toml
.github/workflows/: actions.yml
components/: get_data.yml  preprocess.yml
